add filter by in search page

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -3,6 +3,12 @@
     "SETTINGS": "اعدادات",
     "LOGIN": "تسجيل الدخول",
     "SEARCH": "بحث",
+    "FILTER_BY": "البحث في",
+    "OK": "اختر",
+    "CATEGORY_FILTER": "الفئة",
+    "LOCATION_FILTER": "الموقع",
+    "DATE_FILTER": "التاريخ",
+    "COURSE_PROVIDER_FILTER": "مقدم الدورة",
     "BESTOVERS": "أفضل العروض",
     "BESTSTORES": "أفضل المتاجر لهذا الشهر",
     "RECOMENDED": "منتجات ننصح بها",
