--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,6 +3,12 @@
     "SETTINGS": "Settings",
     "LOGIN": "Login",
     "SEARCH": "Search",
+    "FILTER_BY": "Filter by",
+    "OK": "OK",
+    "CATEGORY_FILTER": "Category",
+    "LOCATION_FILTER": "Location",
+    "DATE_FILTER": "Date",
+    "COURSE_PROVIDER_FILTER": "Course Provider",
     "BESTOVERS": "Best Offers",
     "BESTSTORES": "Best Stores For This Month",
     "RECOMENDED": "Recommended products",
