tap for more on sliders

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -178,5 +178,6 @@
     "INFO_CHANGE_BUTTON": "تغيير كلمة المرور",
     "USED_TITLE_MESSAGES": "بريد",
     "USED_TITLE_MESSAGES_MAIN": "الرسائل",
+    "TAP_FOR_MORE": "اضغط للمزيد",
     "": ""
 }
