--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -178,5 +178,6 @@
     "INFO_CHANGE_BUTTON": "Change Password",
     "USED_TITLE_MESSAGES": "Msgs",
     "USED_TITLE_MESSAGES_MAIN": "Messges",
+    "TAP_FOR_MORE": "Tab for more",
     "": ""
 }
