filter by options

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -4,11 +4,15 @@
     "LOGIN": "تسجيل الدخول",
     "SEARCH": "بحث",
     "FILTER_BY": "البحث في",
+    "CHOOSE_CITY": "اختر مدينة",
+    "CHOOSE_CATEGORY": "اختر فئة",
+    "CHOOSE_DATE": "حدد تاريخ",
+    "CHOOSE_COURSE_PROVIDER": "أدخل مقدم الكورس",
     "OK": "اختر",
     "CATEGORY_FILTER": "الفئة",
     "LOCATION_FILTER": "الموقع",
     "DATE_FILTER": "التاريخ",
-    "COURSE_PROVIDER_FILTER": "مقدم الدورة",
+    "COURSE_PROVIDER_FILTER": "مقدم الكورس",
     "BESTOVERS": "أفضل العروض",
     "BESTSTORES": "أفضل المتاجر لهذا الشهر",
     "RECOMENDED": "منتجات ننصح بها",
