--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,6 +4,10 @@
     "LOGIN": "Login",
     "SEARCH": "Search",
     "FILTER_BY": "Filter by",
+    "CHOOSE_CITY": "Choose city",
+    "CHOOSE_CATEGORY": "Choose category",
+    "CHOOSE_DATE": "Set date",
+    "CHOOSE_COURSE_PROVIDER": "Enter course provider",
     "OK": "OK",
     "CATEGORY_FILTER": "Category",
     "LOCATION_FILTER": "Location",
